client/src/components/styles/app.scss
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Roboto, sans-serif;
  height: 100vh;
  width: 100vw;
  text-align: center;
}

.App {
  width: 100vw;
  height: 100vh;
}

.page {
  min-height: 100vh;
  min-width: 100vw;
}

.input-field input {
  border-bottom: 1px solid black !important;
}

.input-field textarea {
  border: 1px solid black !important;
}

.input-field label {
  color: black;
}

.input-field input[type="text"]:focus + label {
  color: black;
}

.input-field input[type="text"]:focus {
  border-bottom: 1px solid black;
  box-shadow: 0 1px 0 0 black;
}

.input-field .prefix.active {
  color: black;
}

